--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,12 @@
 			<version>4.8.3</version>
 		</dependency>
 		<dependency>
+    <groupId>io.github.bonigarcia</groupId>
+    <artifactId>webdrivermanager</artifactId>
+    <version>5.9.2</version>
+</dependency>
+
+		<dependency>
 			<groupId>jakarta.mail</groupId>
 			<artifactId>jakarta.mail-api</artifactId>
 			<version>2.1.2</version>
